--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <div class="nav__content">
-      <div class="logo"><a href="#">Balasaheb H</a></div>
+      <div class="logo"><a href="#">Portfolio.</a></div>
       <label for="check" class="checkbox">
         <i class="ri-menu-line"></i>
       </label>
