--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
          
 
           <div class="about-btn">
-            <button class="btn">Download CV <i class="uil uil-import"></i></button>
+            <button class="btn">Download Resume<i class="uil uil-import"></i></button>
           </div>
         </div>
       </div>
