--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <div class="content">
 
           <h3>Bouncing Ball</h3>
-          <p>Bouncing Ball animation without care of physics laws</p>
+          <p>Bouncing Ball animation made without care of physics laws</p>
 
         </div>
         <div class="button">
