--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <title>My Portfolio</title>
+  <title>My Portfolio-Balasaheb Hinge</title>
 </head>
 
 <body>
