new project added

--- a/index.html
+++ b/index.html
@@ -196,6 +196,27 @@
         </div>
       </div>
 
+      <div class="card" data-aos="zoom-in">
+
+        <div class="img">
+          <img src="assets/portfolio.png" alt="image not available">
+        </div>
+
+        <div class="content">
+
+          <h3>Portfolio Website</h3>
+          <p>Portfolio website which shows my projects, skills and Experience.</p>
+
+        </div>
+        <div class="button">
+
+          <button>
+            <a href="https://balasaheb078.github.io/portfolio/" target=_blank>Visit Website</a>
+
+          </button>
+        </div>
+      </div>
+
     </div>
   </section>
   <!-- -------------- CONTACT BOX ---------------- -->
