--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="contents" data-aos="zoom-in">
         <p class="subtitle">HELLO</p>
         <h1 class="title">
-          I'm <span>Balasaheb Hinge<br />a</span> Web Developer
+          I'm <span>Balasaheb Hinge<br /></span> a Web Developer
         </h1>
         <p class="description">
           This is my official portfolio website
