--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div class="contact-contains">
       <div class="email" data-aos="zoom-in">
         <img src="./assets/email.png" alt="Email icon" class="email-icon" />
-        <span><a href="mailto:balasahebhinge078@gmail.com">balasahebhinge078@gmail.com</a></span>
+        <span><a href="mailto:balasahebhinge078@gmail.com">Email me</a></span>
       </div>
 
       <div class="linkedin" data-aos="zoom-in">
