--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="image" data-aos="zoom-in">
-        <img src="assets/profile.jpeg" alt="profile" />
+        <img src="assets/profile.jpg" alt="profile" />
       </div>
     </div>
   </section>
