Year of study updated

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li>
               Name: Balasaheb Hinge
             </li>
-            <li>Academic Status: Third-year Computer Engineering student at AISSMS College of Engineering, Pune</li>
+            <li>Academic Status: Final-year Computer Engineering student at AISSMS College of Engineering, Pune</li>
             <div class="skills">
               <li>Skills:</li>
 
